#99 [root] Update installation docs